Lot of internal changes

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -16,7 +16,7 @@
         <ul>
           <li><a href="#mozTocId387531">Chapter 1. Introduction</a></li>
           <li><a href="#mozTocId558083">Chapter 2. A special thanks</a></li>
-          <li><a href="#mozTocId642601">Chapter 3. Gopher 2 specific notes</a></li>
+          <li><a href="#mozTocId584843">Chapter 3. Gopher 2 specific notes</a></li>
           <li><a href="#mozTocId419893">Chapter 4. SDK</a></li>
           <li><a href="#mozTocId647026">Chapter 5. Compilation</a></li>
           <li><a href="#mozTocId59157">Chapter 6. Library name-space</a></li>
@@ -50,11 +50,11 @@
           <li><a href="#mozTocId414110">Chapter 2. Timer</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId81440">Part 5. Binary files</a>
+      <li><a href="#mozTocId7831"> Part 5. Binary files</a>
         <ul>
-          <li><a href="#mozTocId844773">Chapter 1. Base binary files subsystem</a></li>
-          <li><a href="#mozTocId392890">Chapter 2. File reader</a></li>
-          <li><a href="#mozTocId143184">Chapter 3. File writer</a></li>
+          <li><a href="#mozTocId545770"> Chapter 1. Base binary files subsystem</a></li>
+          <li><a href="#mozTocId599289"> Chapter 2. File reader</a></li>
+          <li><a href="#mozTocId520212"> Chapter 3. File writer</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId308337">Part 6. Other important things</a>
@@ -64,7 +64,7 @@
           <li><a href="#mozTocId54966">Chapter 3. Abnormal program termination</a></li>
           <li><a href="#mozTocId338492">Chapter 4. Interaction with operation
               system</a></li>
-          <li><a href="#mozTocId374566">Chapter 5. Filesystem</a></li>
+          <li><a href="#mozTocId47855">Chapter 5. Filesystem</a></li>
           <li><a href="#mozTocId73461">Chapter 6. Input</a></li>
         </ul>
       </li>
@@ -167,8 +167,8 @@
       Also thanks to PVS-Studio team for <a href="https://www.viva64.com/en/b/0614/">free
         license</a>.<br>
     </big>
-    <h2><a id="mozTocId642601" class="mozTocH2"></a><big>Chapter 3. Gopher 2
-        specific notes</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId584843"></a><a id="mozTocId642601" class="mozTocH2"></a><big>Chapter
+        3. Gopher 2 specific notes</big></h2>
     <big><br>
       This library need <a href="https://vk.com/topic-147138567_38560454">alternative
         firmware</a> for correct work.<br>
@@ -403,7 +403,10 @@ Dingux
         *Screen);</span> – Initialize the subsystem.<br>
       <span style="font-style: italic;">IMG_Pixel *Surface::get_image();</span>
       – Return handle to image buffer.<br>
-      <span style="font-style: italic;">size_t Surface::get_length() const;</span>
+    </big><big><span style="font-style: italic;">void Surface::load_image(Image
+        &amp;buffer);</span> – Load an image from memory buffer. Replace current
+      image if exist.</big><br>
+    <big> <span style="font-style: italic;">size_t Surface::get_length() const;</span>
       – Return length of image buffer in bytes.<br>
       <span style="font-style: italic;">unsigned long int
         Surface::get_image_width() const;</span> – Return image width in pixels.<br>
@@ -422,27 +425,24 @@ Dingux
     <big><br>
       <span style="text-decoration: underline;">Very important subsystems</span><br>
       <br>
-      Advanced image subsystem is extended version of base image subsystem.
-      Background and sprite subsystems working over advanced image subsystem.<br>
+      Animation subsystem let you control animation frames.<br>
       <br>
-      <span style="text-decoration: underline;">Work with advanced graphics</span><br>
+      <span style="text-decoration: underline;">Work with animation subsystem</span><br>
       <br>
-      <span style="font-style: italic;">Canvas</span> class provide simple
-      access to advanced image subsystem. It is derived from Surface class.
-      Don’t use it directly. Let’s look to public methods.<br>
+      <span style="font-style: italic;">Animation</span> class provide simple
+      access to advanced image subsystem. Don’t use it directly. Let’s look to
+      public methods.<br>
       <br>
-      <span style="font-style: italic;">void Canvas::set_frames(const unsigned
-        long int amount);</span> – Set amounts of frames in scrolling background
-      or animated sprite.<br>
-      <span style="font-style: italic;">unsigned long int Canvas::get_frames()
-        const;</span> – Return amount of frames in scrolling background or
-      animated sprite.<br>
-      <span style="font-style: italic;">unsigned long int Canvas::get_frame()
+      <span style="font-style: italic;">void Animation::set_frames(const
+        unsigned long int amount);</span> – Set amounts of frames in scrolling
+      background or animated sprite.<br>
+      <span style="font-style: italic;">unsigned long int
+        Animation::get_frames() const;</span> – Return amount of frames in
+      scrolling background or animated sprite.<br>
+      <span style="font-style: italic;">unsigned long int Animation::get_frame()
         const;</span> – Return current frame in scrolling background or animated
-      sprite.<br>
-      <span style="font-style: italic;">void Canvas::load_image(Image
-        &amp;buffer);</span> – Load an image from memory buffer. Replace current
-      image if exist. </big>
+      sprite.<span style="font-style: italic;"><br>
+      </span> </big>
     <h2><a class="mozTocH2" name="mozTocId678026"></a><big>Chapter 7. Background</big></h2>
     <big><br>
       <span style="text-decoration: underline;">Level decoration</span><br>
@@ -487,8 +487,9 @@ Dingux
       <span style="text-decoration: underline;">Work with background</span><br>
       <br>
       Just use <span style="font-style: italic;">Background</span> class for
-      work with background. It is derived from Canvas. Let’s look to public
-      methods.<br>
+      work with background. It is derived from <span style="font-style: italic;">Surface</span>
+      and <span style="font-style: italic;">Animation</span> classes. Let’s
+      look to public methods.<br>
       <br>
       <span style="font-style: italic;">unsigned long int
         Background::get_width() const;</span> – Return background width in
@@ -569,7 +570,9 @@ Dingux
       <span style="text-decoration: underline;">Work with sprites</span><br>
       <br>
       Just use <span style="font-style: italic;">Sprite</span> class for work
-      with a sprite. It is derived from Canvas. Let’s look to public methods.<br>
+      with a sprite. It is derived from <span style="font-style: italic;">Surface</span>
+      and <span style="font-style: italic;">Animation</span> classes. Let’s
+      look to public methods.<br>
       <br>
       <span style="font-style: italic;">void Sprite::load_sprite(Image
         &amp;buffer,const SPRITE_TYPE kind,const unsigned long int frames);</span>
@@ -801,10 +804,10 @@ Dingux
       <br>
       <span style="font-style: italic;">struct Collision_Box</span><br style="font-style: italic;">
       <span style="font-style: italic;">{</span><br style="font-style: italic;">
-      <span style="font-style: italic;">unsigned long int x:32;</span><br style="font-style: italic;">
-      <span style="font-style: italic;">unsigned long int y:32;</span><br style="font-style: italic;">
-      <span style="font-style: italic;">unsigned long int width:32;</span><br style="font-style: italic;">
-      <span style="font-style: italic;">unsigned long int height:32;</span><br style="font-style: italic;">
+      <span style="font-style: italic;">unsigned long int x;</span><br style="font-style: italic;">
+      <span style="font-style: italic;">unsigned long int y;</span><br style="font-style: italic;">
+      <span style="font-style: italic;">unsigned long int width;</span><br style="font-style: italic;">
+      <span style="font-style: italic;">unsigned long int height;</span><br style="font-style: italic;">
       <span style="font-style: italic;">};</span><br>
       <br style="text-decoration: underline;">
       <span style="text-decoration: underline;">Work with collision detector</span><br>
@@ -844,17 +847,17 @@ Dingux
       <span style="font-style: italic;">Timer</span> is very useful thing. Just
       use Timer class for work with the timer. Let’s look to public methods.<br>
       <br>
-      <span style="font-style: italic;">void Timer::set_timer(const unsigned
-        long int seconds);</span> – Set timer interval and initialize start
-      point.<br>
+      <span style="font-style: italic;">void Timer::set_timer(const double
+        seconds);</span> – Set timer interval and initialize start point.<br>
       <span style="font-style: italic;">bool Timer::check_timer();</span> –
       Initialize stop point. Return true and reinitialize start point if
       interval between stop and start points large or equal than specific
       seconds. </big><big> </big>
-    <h1><a id="mozTocId81440" class="mozTocH1"></a><big> Part 5. Binary files</big></h1>
+    <h1><a class="mozTocH1" name="mozTocId7831"></a><a id="mozTocId81440" class="mozTocH1"></a><big>
+        Part 5. Binary files</big></h1>
     <big> </big>
-    <h2><a id="mozTocId844773" class="mozTocH2"></a><big> Chapter 1. Base binary
-        files subsystem</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId545770"></a><a id="mozTocId844773" class="mozTocH2"></a><big>
+        Chapter 1. Base binary files subsystem</big></h2>
     <big> <br>
       <u>Work with binary files</u><br>
       <br>
@@ -873,7 +876,8 @@ Dingux
       <u>Important notice</u><br>
       <br>
       Target file size limit is 2 gigabytes. </big>
-    <h2><a id="mozTocId392890" class="mozTocH2"></a><big> Chapter 2. File reader</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId599289"></a><a id="mozTocId392890" class="mozTocH2"></a><big>
+        Chapter 2. File reader</big></h2>
     <big> <br>
       File reader intend for reading data from a binary files. <i>Input_File</i>
       class provide access to file reader. It is derived from <i>Binary_File</i>
@@ -882,7 +886,8 @@ Dingux
       <i> void Input_File::open(const char *name);</i> – Open a file for read.<br>
       <i> void Input_File::read(void *buffer,const size_t length);</i> – Read
       data from the file. </big>
-    <h2><a id="mozTocId143184" class="mozTocH2"></a><big> Chapter 3. File writer</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId520212"></a><a id="mozTocId143184" class="mozTocH2"></a><big>
+        Chapter 3. File writer</big></h2>
     <big> <br>
       File writer intend for write data to binary files. <i>Output_File</i>
       class provide access to file reader. It is derived from <i>Binary_File</i>
@@ -974,18 +979,22 @@ Dingux
         *name);</span> – Enable error logging. Error messages will redirect to a
       log file.<br>
     </big>
-    <h2><a id="mozTocId374566" class="mozTocH2"></a><big>Chapter 5. Filesystem</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId47855"></a><a id="mozTocId374566" class="mozTocH2"></a><big>Chapter
+        5. Filesystem</big></h2>
     <big><br>
       Filesystem subsystem let you doing some file operation. <span style="font-style: italic;">Filesystem</span>
       class provide simple access to this subsystem. Let’s look to public
       methods.<br>
       <br>
-      <span style="font-style: italic;">void Filesystem::file_exist(const char
+      <span style="font-style: italic;">bool Filesystem::file_exist(const char
         *name);</span> – Check the target file for exist.<br>
-      <span style="font-style: italic;">void Filesystem::delete_file(const char
-        *name);</span> – Delete the target file.<br>
-      <span style="font-style: italic;">bool Filesystem::get_status() const;</span>
-      – Return false if last file operation was failed. </big>
+      <span style="font-style: italic;">bool Filesystem::delete_file(const char
+        *name);</span> – Delete the target file.<span style="font-style: italic;"></span><br>
+      <br>
+      <span style="text-decoration: underline;">Important remark</span><br>
+      <br>
+      All methods return false if operation was failed.<br>
+    </big>
     <h2><a class="mozTocH2" name="mozTocId73461"></a><big>Chapter 6. Input</big></h2>
     <big><br>
       <span style="text-decoration: underline;">A few words about built-in
@@ -1329,7 +1338,6 @@ sound
     <big><br>
     </big>
     <table style="text-align: left; width: 425px; height: 94px;" cellspacing="2"
-
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1648,6 +1656,9 @@ sound
     <big>5.1.1 – Source code was synced with Neon game development kit 5.4.2.</big><br>
     <big>5.1.2 – Source code was synced with Neon game development kit 5.4.3.</big><br>
     <big>5.1.3 – Source code was synced with Neon game development kit 5.4.4.</big><br>
-    <big>5.1.3.1 – Makefile was updated.</big>
+    <big>5.1.3.1 – Makefile was updated.<br>
+    </big> <big>5.1.4 – Source code was synced with Neon game development kit
+      5.6.1.<br>
+    </big><big>5.1.5 – Game-pad support was improved.</big><br>
   </body>
 </html>
