Documentation was updated

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -36,7 +36,7 @@
           <li><a href="#mozTocId436473">Chapter 3. Base graphics subsystem</a></li>
           <li><a href="#mozTocId857731">Chapter 4. Graphic primitives</a></li>
           <li><a href="#mozTocId881761">Chapter 5. Base image subsystem</a></li>
-          <li><a href="#mozTocId889327">Chapter 6. Advanced image subsystem</a></li>
+          <li><a href="#mozTocId889327">Chapter 6. Animation subsystem</a></li>
           <li><a href="#mozTocId678026">Chapter 7. Background</a></li>
           <li><a href="#mozTocId104290">Chapter 8. Sprites</a></li>
           <li><a href="#mozTocId443325">Chapter 9. Tile-set</a></li>
@@ -420,8 +420,8 @@ Dingux
         MIRROR_TYPE kind);</span> – Do mirror the current image.</big><br>
     <big><i>void Surface::horizontal_mirror();</i> – Do horizontal image mirror.</big><br>
     <big><i>void Surface::vertical_mirror();</i> – Do vertical image mirror.</big>
-    <h2><a class="mozTocH2" name="mozTocId889327"></a><big>Chapter 6. Advanced
-        image subsystem</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId889327"></a><big>Chapter 6. Animation
+        subsystem</big></h2>
     <big><br>
       <span style="text-decoration: underline;">Very important subsystems</span><br>
       <br>
@@ -430,8 +430,8 @@ Dingux
       <span style="text-decoration: underline;">Work with animation subsystem</span><br>
       <br>
       <span style="font-style: italic;">Animation</span> class provide simple
-      access to advanced image subsystem. Don’t use it directly. Let’s look to
-      public methods.<br>
+      access to animation subsystem. Don’t use it directly. Let’s look to public
+      methods.<br>
       <br>
       <span style="font-style: italic;">void Animation::set_frames(const
         unsigned long int amount);</span> – Set amounts of frames in scrolling
@@ -1659,6 +1659,7 @@ sound
     <big>5.1.3.1 – Makefile was updated.<br>
     </big> <big>5.1.4 – Source code was synced with Neon game development kit
       5.6.1.<br>
-    </big><big>5.1.5 – Game-pad support was improved.</big><br>
+    </big><big>5.1.5 – Game-pad support was improved.<br>
+    </big><big>5.1.5.1 – Documentation was updated.</big><br>
   </body>
 </html>
